--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-service-dn
+  name: flask-service-jolu
 spec:
   selector:
-    app.kubernetes.io/name: flask-dn
+    app.kubernetes.io/name: flask-jolu
   type: LoadBalancer
   ports:
   - name: flask-service-port
