--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
       
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f deployment.yaml 
+          kubectl rollout restart deployment flask || kubectl apply -f deployment.yaml 
           kubectl apply -f service.yaml 
         
       
